--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,12 @@
       <h1 class="display-3 fw-bold">Passione e Professionalitá</h1>
       <h3 class="fw-normal text-muted mb-3">Ciclomeccanica per ogni strada!</h3>
       <div class="d-flex gap-3 justify-content-center lead fw-normal">
-        <a class="icon-link" href="#">
-          Learn more
+        <a class="icon-link" href="/registrati">
+          Registrati
           <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
         </a>
-        <a class="icon-link" href="#">
-          Buy
+        <a class="icon-link" href="/log_in">
+          Accedi
           <svg class="bi"><use xlink:href="#chevron-right"></use></svg>
         </a>
       </div>
