--- a/templates/admin/sidebar.html
+++ b/templates/admin/sidebar.html
@@ -36,7 +36,7 @@
     </ul>
     <div class="dropdown border-top">
         <a href="#" class="d-flex align-items-center justify-content-center p-3 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="https://github.com/mdo.png" alt="mdo" width="24" height="24" class="rounded-circle">
+            <img src="{% if admin_utente and admin_utente[5] %}{{ url_for('static', filename=admin_utente[5]) }}{% else %}/static/default_profile.png{% endif %}" alt="Foto profilo" width="24" height="24" class="rounded-circle">
         </a>
         <ul class="dropdown-menu text-small shadow">
             <li><a class="dropdown-item" href="/logout">Sign out</a></li>
