--- a/templates/basic/layout.html
+++ b/templates/basic/layout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CicloVerso</title>
   <!-- CDN Bootstrap -->
-    <link href="static/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!--Icone Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -53,7 +53,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/prenota">Prenota</a>
+          <a class="nav-link" href="/userprenotazione">Prenota</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -64,6 +64,7 @@
             <li><a class="dropdown-item" href="/manutenzione">Manutenzione</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="/contatti">Contatti</a></li>
+            <li><a class="dropdown-item" href="/profilo">Profilo</a></li>
           </ul>
         </li>
       </ul>
