--- a/templates/admin/sidebar.html
+++ b/templates/admin/sidebar.html
@@ -11,7 +11,10 @@
     </a>
     <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
         <li class="nav-item">
-            <a href="/admin" class="nav-link {% if request.path == '/admin' %}active{% endif %} py-3 border-bottom rounded-0" aria-current="page" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Home" data-bs-original-title="Home">
+            <a href="{{ url_for('admin.crea_slot') }}" 
+                class="nav-link {% if request.path == url_for('admin.crea_slot') %}active{% endif %} py-3 border-bottom rounded-0"
+                    aria-current="page" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Home"
+                    data-bs-original-title="Home">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-calendar-plus" viewBox="0 0 16 16">
                     <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7"/>
                     <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
