--- a/templates/basic/layout.html
+++ b/templates/basic/layout.html
@@ -20,10 +20,10 @@
     </a>
   </div>
 </nav>
-    <!-- logo di copertina -->
-<!--<img id="logo_st" src="static/img/cicloverso2.png" class="img-fluid" alt="Logo centro">-->
+
 {% if session.user_id %}
         {% if session.ruolo == 'admin' or session.ruolo == 'root' %}
+    <!--NavbarAdmin-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary "data-bs-theme="dark">
     <div class="container-fluid">
     <a class="navbar-brand" href="/logout">Logout</a>
@@ -39,7 +39,7 @@
           <a class="nav-link" href="/admin">Dashboard</a>
         </li>
       </nav>
-    <!--Navbar-->
+    <!--NavbarUser-->
     {% else %}
     <nav class="navbar navbar-expand-lg bg-body-tertiary "data-bs-theme="dark">
   <div class="container-fluid">
@@ -68,10 +68,6 @@
           </ul>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
 </nav>
@@ -112,7 +108,7 @@
     {% block content %}
     {% endblock %}
     {% if session.user_id %}
-    <p>Ciao {{ session.ruolo }}!</p>
+    <h1 style="position: relative; ">Ciao {{ session.ruolo }}!</h1>
 {% endif %}
 <!--footer-->
     <footer class="container py-5">
@@ -166,7 +162,5 @@
 <!-- CDN Js Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="static/js/adminscript.js"></script>
-<script src="static/js/calendarscript.js"></script>
 </body>
 </html>
