--- a/templates/admin/sidebar.html
+++ b/templates/admin/sidebar.html
@@ -1,51 +1,14 @@
-<html>
-<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-</head>
-<div class="d-flex flex-column flex-shrink-0 bg-body-tertiary mb-auto text-center" style="width: 4.5rem;">
-    <a href="/" class="d-block p-3 link-body-emphasis text-decoration-none" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Icon-only">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
-            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
-          </svg>
-        <span class="visually-hidden">Icon-only</span>
+<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 250px; height: 100vh;">
+    <a href="{{ url_for('admin.admin') }}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-decoration-none">
+      <i class="bi bi-speedometer2 me-2"></i><span class="fs-4">Dashboard</span>
     </a>
-    <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
-        <li class="nav-item">
-            <a href="{{ url_for('admin.crea_slot') }}" 
-                class="nav-link {% if request.path == url_for('admin.crea_slot') %}active{% endif %} py-3 border-bottom rounded-0"
-                    aria-current="page" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Home"
-                    data-bs-original-title="Home">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="black" class="bi bi-calendar-plus" viewBox="0 0 16 16">
-                    <path d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7"/>
-                    <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"/>
-                  </svg>
-            </a>
-        </li>
-        <li>
-            <a href="/admin/servizi" class="nav-link {% if request.path == '/admin/servizi' %}active{% endif %} py-3 border-bottom rounded-0" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Products" data-bs-original-title="Products">
-                <svg class="bi pe-none" width="24" height="24" role="img" aria-label="Products"><use xlink:href="#grid"></use></svg>
-            </a>
-        </li>
-        <li>
-            <a href="/admin/prenotazioni" class="nav-link {% if request.path == '/admin/prenotazioni' %}active{% endif %} py-3 border-bottom rounded-0" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Orders" data-bs-original-title="Orders">
-                <svg class="bi pe-none" width="24" height="24" role="img" aria-label="Orders"><use xlink:href="#table"></use></svg>
-            </a>
-        </li>
-        <li>
-            <a href="/admin/utenti" class="nav-link {% if request.path == '/admin/utenti' %}active{% endif %} py-3 border-bottom rounded-0" data-bs-toggle="tooltip" data-bs-placement="right" aria-label="Customers" data-bs-original-title="Customers">
-                <svg class="bi pe-none" width="24" height="24" role="img" aria-label="Customers"><use xlink:href="#people-circle"></use></svg>
-            </a>
-        </li>
+    <hr>
+    <ul class="nav nav-pills flex-column mb-auto">
+      <li><a href="{{ url_for('admin.crea_slot') }}" class="nav-link {% if request.endpoint == 'admin.crea_slot' %}active{% endif %}"><i class="bi bi-calendar-plus me-2"></i>Slot</a></li>
+      <li><a href="{{ url_for('admin.gestisci_prenotazioni') }}" class="nav-link {% if request.endpoint == 'admin.gestisci_prenotazioni' %}active{% endif %}"><i class="bi bi-calendar-check me-2"></i>Prenotazioni</a></li>
+      <li><a href="{{ url_for('admin.gestisci_utenti') }}" class="nav-link {% if request.endpoint == 'admin.gestisci_utenti' %}active{% endif %}"><i class="bi bi-people me-2"></i>Utenti</a></li>
+      <li><a href="{{ url_for('admin.gestisci_servizi') }}" class="nav-link {% if request.endpoint == 'admin.gestisci_servizi' %}active{% endif %}"><i class="bi bi-tools me-2"></i>Servizi</a></li>
+      <li><a href="{{ url_for('admin.mostra_orari_apertura') }}" class="nav-link {% if request.endpoint == 'admin.mostra_orari_apertura' %}active{% endif %}"><i class="bi bi-clock-history me-2"></i>Orari Apertura</a></li>
     </ul>
-    <div class="dropdown border-top">
-        <a href="#" class="d-flex align-items-center justify-content-center p-3 link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="{% if admin_utente and admin_utente[5] %}{{ url_for('static', filename=admin_utente[5]) }}{% else %}/static/default_profile.png{% endif %}" alt="Foto profilo" width="24" height="24" class="rounded-circle">
-        </a>
-        <ul class="dropdown-menu text-small shadow">
-            <li><a class="dropdown-item" href="/logout">Sign out</a></li>
-        </ul>
-        <ul class="dropdown-menu text-small shadow">
-            <li><a class="dropdown-item" href="/logout">Sign out</a></li>
-    </div>
-</div>
-</html>
+  </div>
+  
